# Research-RAG-LLM

./: .gitattributes  .gitignore  main.py  pyproject.toml  rag_embed.py  rag_generate.py  topics_list.txt
data/: papers_metadata.jsonl
notebooks/: data_analysis.ipynb  demo.ipynb
output/: README.md  adapter_config.json  test_predictions.txt  tokenizer_config.json
output/checkpoint-350/: adapter_config.json  rng_state.pth  scaler.pt  scheduler.pt  tokenizer.json  trainer_state.json
scripts/: download_data.py  download_pdf.py  extract_text.py  get_topics.py
src/: preprocess.py  split.py  train.py  utils.py
src/rag/: generate.py  retrieve.py
