[project]
name = "research-rag-llm"
version = "0.1.0"
description = "Conversational LLM fine-tuned on research papers with RAG"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain",
    "openai",
    "faiss-cpu",
    "sentence-transformers",
    "pypdf",
    "requests>=2.32.3",
]
