[project]
name = "research-rag-llm"
version = "0.1.0"
description = "Conversational LLM fine-tuned on research papers with RAG"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    'arxiv',
    'tqdm',
    "langchain",
    "openai",
    "faiss-cpu",
    "sentence-transformers",
    "pymupdf>=1.25.5",
    "nltk>=3.9.1",
    "pandas>=2.2.3",
]
