[project]
name = "research-rag-llm"
version = "0.1.0"
description = "Conversational LLM fine-tuned on research papers with RAG"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    'arxiv',
    'tqdm',
    "langchain",
    "openai",
    "faiss-cpu",
    "sentence-transformers",
    "pymupdf>=1.25.5",
    "nltk>=3.9.1",
    "pandas>=2.2.3",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "seaborn>=0.13.2",
    "transformers>=4.50.3",
    "datasets>=3.5.0",
    "peft>=0.15.1",
]
